src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__library_ui_tests__tests__snapshot_tests__library_ui_renders_update_all_authors_prompt.snap
---
source: src/ui/readarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name ▼                                             Status        Quality Profile       Metadata Profile      Books       Size        Monitored  Tags              
=> Test Author                                        Continuing    Standard              Comprehensive         0           0.00 GB     🏷          alex              
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭──────────────────  Update All Authors  ───────────────────╮                                                     
                                                   │ Do you want to update info and scan your disks for all of │                                                     
                                                   │                       your authors?                       │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
