src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__library_ui_tests__tests__snapshot_tests__readarr_library_Authors.snap
---
source: src/ui/readarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name ▼                                             Status        Quality Profile       Metadata Profile      Books       Size        Monitored  Tags              
=> Test Author                                        Continuing    Standard              Standard              0           0.00 GB     🏷          alex
